# Genius-Invokation-Tool

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/GITCGcore/: card.h  character.h  code.h  core.h  enum.h  invoked.h  skill.h  summon.h  table.h  trigger.h
src/GITCGcore/table/: card.h  character.h  enum.h  skill.h  summon.h  table.h  trigger.h
src/test/: test.cpp
